# function-timer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: audit.yml  clippy.yml  coverage.yml  release.yml  rust.yml
function-timer/: CHANGELOG.md  Cargo.toml
function-timer-macro/: Cargo.toml
function-timer-macro/src/: lib.rs
function-timer/examples/: time_functions.rs  time_impl.rs
function-timer/src/: lib.rs
function-timer/tests/: test_async_function.rs  test_time.rs  test_time_disable.rs  test_time_fail.rs  test_time_function.rs  test_time_ident.rs  test_time_struct.rs
function-timer/tests/fail/: fail.rs  fail.stderr  fail_disable_struct.rs  fail_disable_struct.stderr
