[package]
name = "function-timer-macro"
version = "0.6.0"
edition = "2021"
rust-version = "1.65.0"
authors = ["dalvany"]
description = "Macro that allow to time a function and emit a metric using metrics crate"
repository = "https://github.com/Dalvany/function-timer"
homepage = "https://github.com/Dalvany/function-timer"
documentation = "https://docs.rs/function-timer-macro"
readme = "../README.md"
license = "MIT OR Apache-2.0"
categories = ["development-tools::profiling"]
keywords = ["macro", "metrics", "instrument"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "fold"] }
proc-macro2 = "1.0"
quote = "1.0"
