[package]
name = "function-timer"
version = "0.9.2"
edition = "2021"
rust-version = "1.65.0"
authors = ["dalvany"]
description = "Macro that allow to time a function and emit a metric using metrics crate"
repository = "https://github.com/Dalvany/function-timer"
homepage = "https://github.com/Dalvany/function-timer"
documentation = "https://docs.rs/function-timer"
readme = "../README.md"
license = "MIT OR Apache-2.0"
categories = ["development-tools::profiling"]
keywords = ["macro", "metrics", "instrument"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "test_time_function"

[[test]]
name = "test_time_struct"

[[test]]
name = "test_time_ident"

[[test]]
name = "test_time_fail"

[[test]]
name = "test_time_disable"

[[test]]
name = "test_async_function"

[dependencies]
function-timer-macro = { version = "0.6", path = "../function-timer-macro" }
metrics = "0.24"

[dev-dependencies]
trybuild = "1.0"
metrics-util = "0.20"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
futures-test = "0.3"
